fix the command to run from the command line